--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,8 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/cabinet_title"
-        android:text="Мої курси"
+        android:id="@+id/hello_username"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="48dp"
         style="@style/TextAppearance.AppCompat.Headline"
@@ -16,12 +16,24 @@
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
+    <TextView
+        android:id="@+id/cabinet_title"
+        android:text="Choose mode"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@id/hello_username"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="8dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="140dp"
         app:layout_constraintTop_toBottomOf="@id/cabinet_title"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
