--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    android:id="@+id/course_card_view"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,12 +25,22 @@
             />
 
         <View
+            android:id="@+id/course_sep"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="#c0c0c0"
             app:layout_constraintTop_toBottomOf="@id/course_name_title"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="5dp"/>
+
+        <TextView
+            android:id="@+id/course_desc"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            app:layout_constraintTop_toBottomOf="@+id/course_sep"/>
 
         <ImageView
             android:id="@+id/pic1"
@@ -37,7 +49,7 @@
             android:layout_height="50dp"
             android:src="@drawable/people_in_course_foreground"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/course_name_title"/>
+            app:layout_constraintTop_toBottomOf="@id/course_desc"/>
 
         <TextView
             android:id="@+id/participants_count"
