Created courses list show functionality for teacher

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,8 @@
                 android:id="@+id/filter"/>
             <item android:title="Create course draft"
                 android:id="@+id/create_course_draft"/>
+            <item android:title="Refresh page"
+                android:id="@+id/refresh_page"/>
         </menu>
     </item>
 
