--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,7 @@
     <TextView
         android:id="@+id/cabinet_title"
         android:text="Choose mode"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="48dp"
         style="@style/TextAppearance.AppCompat.Headline"
         android:layout_marginStart="20dp"
@@ -27,6 +27,14 @@
         app:layout_constraintTop_toBottomOf="@id/hello_username"
         app:layout_constraintLeft_toLeftOf="parent"
         />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/creator_course_list_refresh_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Refresh list"
+        app:layout_constraintTop_toTopOf="@id/cabinet_title"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
