--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -9,6 +9,7 @@
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout_course"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
