--- a/app/src/main/res/layout/lesson_item.xml
+++ b/app/src/main/res/layout/lesson_item.xml
@@ -50,5 +50,13 @@
             app:layout_constraintTop_toBottomOf="@id/lesson_desc"
             android:text="Open"/>
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/lesson_delete_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lesson_desc"
+            android:text="delete"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
