Note Builder: note rendering

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
         <item
             android:id="@+id/nav_create"
             android:title="Create" />
+
+        <item
+            android:id="@+id/nav_builder"
+            android:title="Enter builder"/>
     </group>
 
     <item android:title="Tools">
