--- a/app/src/main/res/menu/note_builder_toolbar.xml
+++ b/app/src/main/res/menu/note_builder_toolbar.xml
@@ -22,8 +22,8 @@
             app:showAsAction="always"/>
 
         <item
-            android:id="@+id/clear_canvas"
-            android:title="Clear editor"
+            android:id="@+id/delete_node"
+            android:title="Delete node"
             android:icon="@drawable/ic_action_bin"
             app:showAsAction="always"/>
 
