--- a/app/src/main/res/layout/activity_change_pwd.xml
+++ b/app/src/main/res/layout/activity_change_pwd.xml
@@ -21,7 +21,7 @@
             android:id="@+id/tv_login_title_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change password"
+            android:text="@string/change_password"
             style="@style/TextAppearance.AppCompat.Headline" />
     </LinearLayout>
 
@@ -48,7 +48,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -68,7 +68,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="@string/new_password"
                 android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -77,7 +77,7 @@
             android:id="@+id/btnChangePwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Change password"
+            android:text="@string/change_password"
             app:layout_constraintTop_toBottomOf="@id/editTextNewPassword"
             android:layout_marginTop="10dp" />
 
@@ -95,7 +95,7 @@
                 android:id="@+id/tv_alreadyhaveanaccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Everything OK?"
+                android:text="@string/everything_ok"
                 android:layout_marginRight="20dp"
                 style="@style/TextAppearance.Material3.BodyLarge"/>
 
@@ -103,7 +103,7 @@
                 android:id="@+id/tv_signin_ref"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="@string/login"
                 style="@style/TextAppearance.Material3.BodyLarge"/>
         </LinearLayout>
 
