--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,14 +21,14 @@
             android:id="@+id/tv_login_title_signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="@string/login"
             style="@style/TextAppearance.AppCompat.Headline" />
 
         <TextView
             android:id="@+id/tv_login_desc_signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome back!"
+            android:text="@string/welcome_back"
             style="@style/TextAppearance.AppCompat.Headline" />
     </LinearLayout>
 
@@ -55,7 +55,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Username"
+                android:hint="@string/username"
                 android:inputType="text" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -75,7 +75,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -84,7 +84,7 @@
             android:id="@+id/tv_change_pwd_ref"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change password"
+            android:text="@string/change_password"
             app:layout_constraintTop_toBottomOf="@id/editTextPassword"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -95,7 +95,7 @@
             android:id="@+id/btnSignIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign In"
+            android:text="@string/sign_in"
             app:layout_constraintTop_toBottomOf="@id/tv_change_pwd_ref"
             android:layout_marginTop="10dp" />
 
@@ -113,7 +113,7 @@
                 android:id="@+id/tv_donthaveanaccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account?"
+                android:text="@string/don_t_have_an_account"
                 android:layout_marginRight="20dp"
                 style="@style/TextAppearance.Material3.BodyLarge"/>
 
@@ -121,7 +121,7 @@
                 android:id="@+id/tv_signup_ref"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign Up"
+                android:text="@string/sign_up"
                 style="@style/TextAppearance.Material3.BodyLarge"/>
         </LinearLayout>
 
