--- a/app/src/main/res/layout/create_course_fragment.xml
+++ b/app/src/main/res/layout/create_course_fragment.xml
@@ -8,7 +8,7 @@
         android:id="@+id/create_course_"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Create course"
+        android:text="@string/create_course"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:text="Title"
+            android:text="@string/title"
             android:gravity="center"
             style="@style/TextAppearance.AppCompat.Headline"
             android:id="@+id/create_course_title"
@@ -34,7 +34,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:hint="Course title"
+            android:hint="@string/course_title"
             android:id="@+id/edit_create_course_title"/>
     </LinearLayout>
 
@@ -48,7 +48,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:text="Description"
+            android:text="@string/description"
             android:gravity="center"
             style="@style/TextAppearance.AppCompat.Headline"
             android:id="@+id/create_course_desc"
@@ -58,7 +58,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:hint="Course description"
+            android:hint="@string/course_description"
             android:id="@+id/edit_create_course_desc"
             android:inputType="text|textMultiLine"/>
     </LinearLayout>
@@ -73,7 +73,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:text="Price"
+            android:text="@string/price"
             android:gravity="center"
             style="@style/TextAppearance.AppCompat.Headline"
             android:id="@+id/create_course_price"
@@ -83,7 +83,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:hint="Course price (write 0 to make free)"
+            android:hint="@string/course_price_write_0_to_make_free"
             android:inputType="numberDecimal"
             android:id="@+id/edit_create_course_price"/>
     </LinearLayout>
@@ -98,7 +98,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:text="Color"
+            android:text="@string/color"
             android:gravity="center"
             style="@style/TextAppearance.AppCompat.Headline"
             android:id="@+id/create_course_color"
@@ -109,7 +109,7 @@
             android:id="@+id/create_course_pick_color_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pick a color!"/>
+            android:text="@string/pick_a_color"/>
 
         <!-- Your layout XML file -->
         <View
@@ -125,7 +125,7 @@
         android:id="@+id/create_course_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create course!"
+        android:text="@string/create_course"
         app:layout_constraintTop_toBottomOf="@id/layout_color"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
