--- a/app/src/main/res/layout/creator_lessons_fragment.xml
+++ b/app/src/main/res/layout/creator_lessons_fragment.xml
@@ -8,7 +8,7 @@
         android:id="@+id/creator_lessons_list_refresh_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Refresh lesons list"
+        android:text="@string/refresh_lesons_list"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="15dp"/>
@@ -16,7 +16,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create lesson"
+        android:text="@string/create_lesson"
         android:id="@+id/creator_create_lesson_btn"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
