--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:text="Час 🕐"
+            android:text="@string/exercise_time_to_complete"
             app:layout_constraintTop_toBottomOf="@id/exercise_desc"
             app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:text="Складність 💪🏻"
+            android:text="@string/exercise_difficulty"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_time_hint"/>
 
@@ -87,14 +87,14 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_difficulty_set"
-            android:text="Завдання"/>
+            android:text="@string/exercise"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_difficulty_set"
-            android:text="Відповідь"
+            android:text="@string/answer"
             android:id="@+id/exercise_answer_btn"/>
 
         <androidx.appcompat.widget.AppCompatButton
@@ -103,7 +103,7 @@
             app:layout_constraintLeft_toRightOf="@id/exercise_task_btn"
             app:layout_constraintRight_toLeftOf="@id/exercise_answer_btn"
             app:layout_constraintTop_toBottomOf="@id/tv_difficulty_set"
-            android:text="Зберегти"
+            android:text="@string/save"
             android:id="@+id/exercise_save_btn"/>
 
 
