--- a/app/src/main/res/layout/lesson_item.xml
+++ b/app/src/main/res/layout/lesson_item.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lesson_desc"
-            android:text="Open"/>
+            android:text="@string/open"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/lesson_delete_btn"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lesson_desc"
-            android:text="delete"/>
+            android:text="@string/delete"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
