--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,23 +4,23 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_learn"
-            android:title="Учень" />
+            android:title="@string/student" />
 
         <item
             android:id="@+id/nav_create"
-            android:title="Вчитель" />
+            android:title="@string/creator" />
 
-        <item
-            android:id="@+id/nav_builder"
-            android:title="Конструктор"/>
+<!--        <item-->
+<!--            android:id="@+id/nav_builder"-->
+<!--            android:title="Конструктор"/>-->
     </group>
 
-    <item android:title="Інструменти">
+    <item android:title="@string/tools">
         <menu>
-            <item android:title="Фільтр"
+            <item android:title="@string/filter_drawerlayout"
                 android:icon="@drawable/filter_foreground"
                 android:id="@+id/filter"/>
-            <item android:title="Чернетка курсу"
+            <item android:title="@string/course_draft"
                 android:id="@+id/create_course_draft"/>
         </menu>
     </item>
