--- a/app/src/main/res/menu/filter_context_menu.xml
+++ b/app/src/main/res/menu/filter_context_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="All" android:id="@+id/filter_all"/>
-    <item android:title="Complete" android:id="@+id/filter_complete"/>
-    <item android:title="In progress" android:id="@+id/filter_in_progress"/>
+    <item android:title="@string/all" android:id="@+id/filter_all"/>
+    <item android:title="@string/complete" android:id="@+id/filter_complete"/>
+    <item android:title="@string/in_progress" android:id="@+id/filter_in_progress"/>
 </menu>
