--- a/app/src/main/res/menu/note_answer_toolbar.xml
+++ b/app/src/main/res/menu/note_answer_toolbar.xml
@@ -5,31 +5,31 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/save_note"
-            android:title="Save"
+            android:title="@string/save"
             android:icon="@drawable/ic_action_save"
             app:showAsAction="always"/>
 
         <item
             android:id="@+id/add_node_dialog"
-            android:title="Add node"
+            android:title="@string/add_node"
             android:icon="@drawable/baseline_add_24"
             app:showAsAction="always"/>
 
         <item
             android:id="@+id/set_line_connection"
-            android:title="Add line"
+            android:title="@string/add_line"
             android:icon="@drawable/outline_account_tree_24"
             app:showAsAction="always"/>
 
         <item
             android:id="@+id/delete_node"
-            android:title="Delete node"
+            android:title="@string/delete_node"
             android:icon="@drawable/ic_action_bin"
             app:showAsAction="always"/>
 
         <item
             android:id="@+id/shuffle_nodes"
-            android:title="Shuffle"
+            android:title="@string/shuffle"
             android:icon="@drawable/ic_action_shuffle"
             app:showAsAction="always"/>
     </group>
