--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,30 +10,42 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         style="@style/TextAppearance.AppCompat.Headline"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
     <TextView
-        android:id="@+id/cabinet_title"
-        android:text="@string/creator_mode"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         style="@style/TextAppearance.AppCompat.Headline"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@id/hello_username"
+        android:layout_margin="15dp"
+        android:gravity="center_vertical"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/hello_username"
+        android:id="@+id/my_courses_list"
+        android:text="@string/my_courses"/>
+
+<!--    <TextView-->
+<!--        android:id="@+id/cabinet_title"-->
+<!--        android:text="@string/creator_mode"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="48dp"-->
+<!--        style="@style/TextAppearance.AppCompat.Headline"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="0dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/hello_username"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        />-->
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/creator_course_list_refresh_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/refresh_courses"
-        app:layout_constraintTop_toTopOf="@id/cabinet_title"
+        android:layout_margin="15dp"
+        app:layout_constraintTop_toBottomOf="@id/hello_username"
         app:layout_constraintRight_toRightOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -42,7 +54,7 @@
         android:layout_height="match_parent"
         android:padding="8dp"
         android:layout_marginTop="140dp"
-        app:layout_constraintTop_toBottomOf="@id/cabinet_title"
+        app:layout_constraintTop_toBottomOf="@id/creator_course_list_refresh_button"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
